# routes/users.js
@@ -1,8 +1,0 @@
-const router = require('express').Router();
-const { isAuthenticated } = require('../middleware/authenticate');
-
-router.get('/profile', isAuthenticated, (req, res) => {
-  res.status(200).json(req.user);
-});
-
-module.exports = router;
